# Cleanox-System-Cleanup

./: README.md  cleaner.py  commands.txt  main.py  pyproject.toml  scanner.py
cleanox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
